@@ -1,5 +1,10 @@
 
 Changes and New Features in 4.0 (2020-08-28):
+	* New function for hot-deck missing imputation of
+	x.train and x.test: HDimpute
+	it samples missing values that are row-dependent
+	rather than independent
+	compatible with, and cognizant of, multinomial imputation
 
 Changes and New Features in 3.9 (2020-07-30):
 	* Hot decked version of FPD, S3 method HDPFD, completed 
